--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -531,36 +531,6 @@ C_studies <- C_studies[!is.na(C_studies$values),]
 # yang2021an needs to be encoded for classification (currently just regression)
 C_summary <- read.csv("C_summary.csv")
 
-# 2025-01-24: averaging valence and arousal for this study, which makes the max equivalent to both the mean and median (two models: one valence, one arousal)
-C_summary[C_summary$citekey == "nguyen2017an",]$valuesMax <- C_summary[C_summary$citekey == "nguyen2017an",]$valuesMean 
-
-# 2025-01-24: averaging across quadrants for bhuvanakumar study
-# subset study
-bhuvanakumar <- subset(
-  C_studies, 
-  stringr::str_detect(
-    C_studies$citekey,
-    "bhuvanakumar"
-    )
-)
-# group by algorithm to average across the four quadrants
-bhuvanakumar$model_algorithm <- substr(
-  bhuvanakumar$model_id, 
-  1, 
-  4
-)
-# take the average for each algorithm
-bhuvanakumar |> 
-  group_by(model_algorithm) |>
-  mutate(values = mean(values)) -> bhuvanakumar
-# overwrite values in C_summary
-C_summary[C_summary$citekey == "bhuvanakumar2023em",]$valuesMean <- mean(unique(bhuvanakumar$values))
-C_summary[C_summary$citekey == "bhuvanakumar2023em",]$valuesMedian <- median(unique(bhuvanakumar$values))
-C_summary[C_summary$citekey == "bhuvanakumar2023em",]$valuesMax <- max(unique(bhuvanakumar$values))
-
-remove(bhuvanakumar)
-
-
 C_classes <- read.csv("C_study_class_n.csv")
 
 C_summary <- merge(C_summary, C_classes)
@@ -625,8 +595,8 @@ funnel(m.cor, common = FALSE, studlab=TRUE,backtransf=TRUE)
 #### By class n = 2 vs. > 2
 ```{r}
 C_summary$classes <- 0
-C_summary[C_summary$n_classes < 3,]$classes <- "2"
-C_summary[C_summary$n_classes >= 3,]$classes <- ">2"
+C_summary[C_summary$n_classes == 2,]$classes <- "Binary"
+C_summary[C_summary$n_classes >= 3,]$classes <- "Multiclass"
 
 
 
@@ -654,6 +624,78 @@ forest(m.cor,
 funnel(m.cor, common = FALSE, studlab=TRUE,backtransf=TRUE)
 
 ```
+```{r}
+m.cor <- metacor(cor = valuesMax,     # values 
+                 n = stimulus_n, # could also change to n_classes
+                 studlab = studyREF, # unique_id
+                 data = C_summary,
+                 subgroup = model_class_id,
+                 common = FALSE,
+                 random = TRUE,
+                 prediction = TRUE,
+                 backtransf = TRUE,
+                 sm = "ZCOR",
+                 method.tau = "REML",# could be PM (Paule-Mandel) as well
+                 method.random.ci = "HK", 
+                 title = "MER: Classification: Summary")
+
+
+m.cor
+forest(m.cor,
+       sortvar = TE,
+       prediction = FALSE, 
+             print.tau2 = FALSE,
+             leftlabs = c("Author", "N"),studlab = citekey)
+
+funnel(m.cor, common = FALSE, studlab=TRUE,backtransf=TRUE)
+
+```
+
+
+```{r}
+#| fig-width: 12
+#| fig-height: 6
+forest(m.cor,
+       sortvar = TE,
+       prediction = FALSE, 
+             print.tau2 = FALSE,
+             leftlabs = c("Author", "N"),studlab = studyREF)
+
+fig2b<-funnel(m.cor, common = FALSE, studlab=TRUE,backtransf=TRUE)
+
+library(forestplot)
+data<-tibble::tibble(mean=m.cor$cor,lower=FisherZInv(m.cor$lower),upper=FisherZInv(m.cor$upper),study=m.cor$studlab,n=m.cor$n,cor=round(m.cor$cor,2))
+data<-dplyr::arrange(data,mean)
+
+fp1 <- grid.grabExpr(print(data |>
+  forestplot(labeltext = c(study, n, cor),
+             xlab = "Correlation",
+             xticks = c(0, .25,.5,.75, 1),
+             clip = c(0, 1))|>
+    fp_add_header(study = "Study",n = "N",cor = expression(italic(r))) |>
+    fp_append_row(mean  = m.cor$TE.common,
+                lower = m.cor$lower.common,
+                upper = m.cor$upper.common,
+                study = "Summary",
+                n = sum(m.cor$n),
+                cor = round(m.cor$TE.common,2),
+                is.summary = TRUE) |>
+  fp_set_style(box = "grey50",
+               line = "grey20",
+               summary = "black",
+                txt_gp = fpTxtGp(label = list(gpar(cex = 0.80)),
+                                ticks = gpar(cex = 0.80),
+                                xlab  = gpar(cex = 0.80)))|>
+    fp_decorate_graph(grid = structure( m.cor$TE.common,gp = gpar(lty = 2, col = "grey30")))
+)
+)
+
+source('../etc/custom_funnel_plot.R')
+fp2 <- custom_funnel_plot(m.cor)
+
+gridExtra::grid.arrange(fp1, fp2, ncol=2, widths=c(2,1),heights=c(2,1))
+
+```
 
 
 #### Explore qualities (in progress)
@@ -664,7 +706,7 @@ O <- find.outliers(m.cor)
 #infan <- InfluenceAnalysis(m.cor)
 #print(eggers.test(m.cor))
 
-
+O
 
 ```
 
@@ -750,7 +792,7 @@ add `journal_type` and `stimulus_genre_mixed` as a grouping option
 m.cor_subgroups <- update(m.cor, 
 #       subgroup = model_class_id, 
 #       subgroup = journal_type, 
-#       subgroup = stimulus_genre_mixed, 
+       subgroup = stimulus_genre_mixed, 
        tau.common = FALSE,
        prediction = TRUE)
 
